<resources>
    <string name="app_name">New Application</string>
    <string name="registration_form">Registration Form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender :</string>
    <string name="cancel">Cancel</string>
</resources>
